fix: align styling errors
homepage
	- alternating section background no on all sections
	- bottom quote vertical left line white (expected green)
	- header logo wide in smallest break point (firefox)
community
	- desc text align left (expect center)

--- a/src/components/hero.st.css
+++ b/src/components/hero.st.css
@@ -1,6 +1,9 @@
 .root {}
 
-.logo {}
+.logo {
+    width: 100%;
+}
 
 .buttons {}
 
+.getStarted {}
